3.0.7 -- Updated the One-Click Theme Setup demo content and removed all instances of Atomic Blocks. Removed the GravityForms shortcodes from the One-Click Theme Setup demo content. Fixes alignment when "center align" is set on Buttons blocks after 5.7 update.

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ Description: Creating an eye-catching, attention-grabbing, personal branded site
 Author: brandiD
 Author URI: https://thebrandid.com/
 
-Version: 3.0.6
+Version: 3.0.7
 
 Tags: block-styles, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, left-sidebar, one-column, personal-branding, right-sidebar, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, two-columns, wide-blocks
 
@@ -2317,6 +2317,12 @@ input:focus[type="submit"],
 .site-footer .genesis-nav-menu a:focus,
 .site-footer .genesis-nav-menu a:hover {
 	border-bottom-color: inherit;
+}
+
+/* Custom Blocks
+--------------------------------------------- */
+.wp-block-buttons.aligncenter {
+    justify-content: center;
 }
 
 /* Media Queries
